[FEATURE] Lobby into Game Transition with Two Players and Refactoring